--- a/public/entry.html
+++ b/public/entry.html
@@ -27,63 +27,62 @@
 </head>
 
 <body class="sans-serif">
-  <div class="ma4">
-    <form class="mb4">
-      <h2 class="lh-title">About You</h2>
-      <div class="bg-red white dn ph2 pv2 mb4" id="errorMsg">Please fill out all required fields</div>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Full Name*</legend>
-        <input type="text" id="firstName" name="firstName" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
-          required>
-      </fieldset>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100" required>
-        <legend class="b bw0 f6 pa0 ma0">Credit Score</legend>
-        <select name="creditScore" id="creditScore" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
-          <option disabled="disabled" selected="true">Please Select One</option>
-          <option value="Very Poor" data-credit-score-minimum="300" data-credit-score-max="579">Very Poor (300-579)</option>
-          <option value="Fair" data-credit-score-minimum="580" data-credit-score-max="669">Fair (580-669)</option>
-          <option value="Good" data-credit-score-minimum="670" data-credit-score-max="739">Good (670-739)</option>
-          <option value="Very Good" data-credit-score-minimum="740" data-credit-score-max="799">Very Good (740-799)</option>
-          <option value="Exceptional" data-credit-score-minimum="800" data-credit-score-max="850">Exceptional (800-850)</option>
-        </select>
-      </fieldset>
-      <div class="flex items-center justify-between">
-        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-two-thirds">
-          <legend class="b bw0 f6 pa0 ma0">Monthly Income*</legend>
-          <input type="number" id="incomeLevel" name="incomeLevel" class="input-reset ba b--black-20 br2 ph2 pv1 w-90"
+    <div class="ma4">
+      <form class="mb4">
+        <h2 class="lh-title">Fill out the form below to find out how much home you can afford</h2>
+        <div class="bg-red white dn ph2 pv2 mb4" id="errorMsg">Please fill out all required fields</div>
+        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+          <legend class="b bw0 f6 pa0 ma0">Full Name*</legend>
+          <input type="text" id="firstName" name="firstName" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
+        </fieldset>
+        <div class="flex items-center justify-between">
+        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-50" required>
+          <legend class="b bw0 f6 pa0 ma0">Credit Score</legend>
+          <select name="creditScore" id="creditScore" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
+            <option disabled="disabled" selected="true">Please Select One</option>
+            <option value="Very Poor" data-credit-score-minimum="300" data-credit-score-max="579">Very Poor (300-579)</option>
+            <option value="Fair" data-credit-score-minimum="580" data-credit-score-max="669">Fair (580-669)</option>
+            <option value="Good" data-credit-score-minimum="670" data-credit-score-max="739">Good (670-739)</option>
+            <option value="Very Good" data-credit-score-minimum="740" data-credit-score-max="799">Very Good (740-799)</option>
+            <option value="Exceptional" data-credit-score-minimum="800" data-credit-score-max="850">Exceptional (800-850)</option>
+          </select>
+        </fieldset>
+        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-40" required>
+          <legend class="b bw0 f6 pa0 ma0">Buying Timeframe</legend>
+          <select name="buyTimeline" id="buyTimeline" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
+            <option disabled="disabled" selected="true">Please Select One</option>
+            <option value="1-3 Months">1-3 Months</option>
+            <option value="3-6 Months">3-6 Months</option>
+            <option value="6-12 Months">6-12 Months</option>
+            <option value="12+ Months">12+ Months</option>
+            <option value="Never">Never</option>
+          </select>
+        </fieldset>
+        </div>
+        <div class="flex items-center justify-between">
+          <fieldset class="bw0 ph0 pv2 mb2 mh0 w-two-thirds">
+            <legend class="b bw0 f6 pa0 ma0">Monthly Income*</legend>
+            <input type="number" id="incomeLevel" name="incomeLevel" class="input-reset ba b--black-20 br2 ph2 pv1 w-90" required>
+          </fieldset>
+          <fieldset class="bw0 ph0 pv2 mb2 mh0 w-20 tc">
+            <legend class="mb1">&nbsp;</legend>
+            <a href="https://www.bankrate.com/mortgages/30-year-mortgage-rates" target="_blank" class="bg-green f6 link dim br-pill ph3 pv2 mb2 dib white">Get Today's Rate</a>
+          </fieldset>
+          <fieldset class="bw0 ph0 pv2 mb2 mh0 w-third">
+            <legend class="b bw0 f6 pa0 ma0">Interest Rate*(Based on 30 years fixed)</legend>
+            <input type="number" id="interestRate" name="interestRate" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
+          </fieldset>
+        </div>
+        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+          <legend class="b bw0 f6 pa0 ma0">Down Payment*</legend>
+          <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
+  
+          <legend class="b bw0 f6 pa0 ma0">Comments</legend>
+          <input id="commentSection" name="commentSection" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
             required>
         </fieldset>
-        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-20 tc">
-          <legend class="mb1">&nbsp;</legend>
-          <a href="https://www.bankrate.com/mortgages/30-year-mortgage-rates" target="_blank" class="bg-green f6 link dim br-pill ph3 pv2 mb2 dib white">Get Today's Rate</a>
-        </fieldset>
-        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-third">
-          <legend class="b bw0 f6 pa0 ma0">Interest Rate*</legend>
-          <input type="number" id="interestRate" name="interestRate"
-            class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
-        </fieldset>
-      </div>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Down Payment*</legend>
-        <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
-          required>
-      </fieldset>
-      <div class="b tc f7">
-        Interest Rate % based on 30-Year Fixed: <a href="https://www.navyfederal.org/assets/rates/printMortRatesAll.php" target="_blank" class="blue link">Source</a>
-      </div>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Comments</legend>
-        <input id="commentSection" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
-          required>
-      </fieldset>
-      <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
-        id="updateBtn" type="button">Update</button>
-    </form>
-
-    <div class="f7 tc">
-      <a href="/api/buyers" class="blue dim link">List of Buyers (API)</a> &nbsp; <a
-        href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo</a>
-    </div>
+        <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="updateBtn" type="button">Submit</button>
+      </form>
 
     <!-- Modal -->
     <div id="results" class="bg-white absolute pa4 dn z-5">
@@ -118,6 +117,7 @@
           buyer.forEach(item => {
             let clientName = item.clientname
             let creditGrade = item.creditgrade
+            let bTimeline = item.timeline
             let income = item.income
             let cashdown = item.cashdown
             let budget = item.budget
@@ -134,6 +134,7 @@
             // Prepopulate values into respective fields
             document.querySelector('#firstName').value = clientName
             setSelectedIndex(document.querySelector('#creditScore'), creditGrade)
+            setSelectedIndex(document.querySelector('#buyTimeline'), bTimeline )
             document.querySelector('#incomeLevel').value = income
             document.querySelector('#downPayment').value = cashdown
             document.querySelector('#commentSection').value = commentSection
@@ -146,6 +147,7 @@
         // Grabs user input
         const nameInput = document.querySelector('#firstName').value.trim()
         const creditRating = document.querySelector('#creditScore').value.trim()
+        const buyingTimeline = document.querySelector('#buyTimeline').value.trim()
         const monthlyIncome = document.querySelector('#incomeLevel').value.trim()
         const moneyDown = document.querySelector('#downPayment').value.trim()
         const todaysRate = document.querySelector('#interestRate').value.trim()
@@ -163,6 +165,7 @@
         const userData = {
           clientname: nameInput,
           creditgrade: creditRating,
+          timeline: buyingTimeline,
           income: monthlyIncome,
           cashdown: moneyDown,
           commentsection: commentInput,
@@ -183,7 +186,7 @@
           // console.log('Your Monthly Income: $' + userData.income)
           // console.log('Down Payment Amount: $ ' + userData.cash)
           console.log('comments: '+ userData.commentsection)
-
+          console.log('comments: '+ userData.timeline)
           // Console log monthly max payment and total max budget
           console.log('Your max monthly payment is: $' + monthlyPayment + '.')
           console.log('Your max budget is: $' + parseInt(budget) + '.')
