--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -170,13 +170,14 @@
 <body class="sans-serif">
   <div class="ma4">
     <form class="mb4">
-      <h2 class="lh-title">About You</h2>
+      <h2 class="lh-title">Fill out the form below to find out how much home you can afford</h2>
       <div class="bg-red white dn ph2 pv2 mb4" id="errorMsg">Please fill out all required fields</div>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
         <legend class="b bw0 f6 pa0 ma0">Full Name*</legend>
         <input type="text" id="firstName" name="firstName" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
       </fieldset>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100" required>
+      <div class="flex items-center justify-between">
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-50" required>
         <legend class="b bw0 f6 pa0 ma0">Credit Score</legend>
         <select name="creditScore" id="creditScore" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
           <option disabled="disabled" selected="true">Please Select One</option>
@@ -187,6 +188,18 @@
           <option value="Exceptional" data-credit-score-minimum="800" data-credit-score-max="850">Exceptional (800-850)</option>
         </select>
       </fieldset>
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-40" required>
+        <legend class="b bw0 f6 pa0 ma0">Buying Timeframe</legend>
+        <select name="buyTimeline" id="buyTimeline" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
+          <option disabled="disabled" selected="true">Please Select One</option>
+          <option value="1-3 Months">1-3 Months</option>
+          <option value="3-6 Months">3-6 Months</option>
+          <option value="6-12 Months">6-12 Months</option>
+          <option value="12+ Months">12+ Months</option>
+          <option value="Never">Never</option>
+        </select>
+      </fieldset>
+      </div>
       <div class="flex items-center justify-between">
         <fieldset class="bw0 ph0 pv2 mb2 mh0 w-two-thirds">
           <legend class="b bw0 f6 pa0 ma0">Monthly Income*</legend>
@@ -204,17 +217,17 @@
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
         <legend class="b bw0 f6 pa0 ma0">Down Payment*</legend>
         <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
-
-        <legend class="b bw0 f6 pa0 ma0">Comments</legend>
-        <input id="commentSection" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
+      </fieldset>
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+        <legend class="b bw0 f6 pv2 ma0">What locations are you interested in?</legend>
+        <input id="commentSection" name="commentSection" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="submit-button" type="button">Submit</button>
     </form>
 
     <div class="f7 tc">
-      <a href="/api/buyers" class="blue dim link">List of Buyers (API) |</a> &nbsp;
-      <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo |</a> &nbsp;
+      <a href="https://github.com/lishure/Rent2Riches" class="blue dim link">GitHub Repo |</a> &nbsp;
       <a href="/api/chat" class="blue dim link">Chat (API)</a>
     </div>
 
@@ -235,19 +248,6 @@
         If you would like to move forward, the next step would be to speak with a Lender for a pre-approval.
       <br>
 
-      <!--ROB HTML-->
-
-      <!-- <button class="chat-button" onclick="openForm()">?</button>
-
-      <div class="chat-popup" id="chatForm">
-        <form class="form-container">
-          <button type="button" class="btn cancel" onclick="closeForm()">X</button>
-          <span id=title >Send us feedback</span>
-          <textarea id="email-text" placeholder="Type email.." name="email" required></textarea>
-          <textarea id="msg-text" placeholder="Type message.." name="msg" required></textarea>
-          <button type="btn" class="btn" onclick="sendInfo()">Send</button>
-        </form>
-      </div> -->
   
       <!--ROB HTML END-->
     </div>
@@ -256,43 +256,6 @@
   <div class="overlay fixed z-1"></div>
 
   <script>
-    ////ROB JS////
-
-    // function openForm() {
-    //   document.getElementById("chatForm").style.display="block"
-    // }
-
-    // function closeForm() {
-    //   document.getElementById('chatForm').style.display="none"
-    // }
-
-    // // function grabs info from both textarea
-    // function sendInfo () {
-    //   let email = document.getElementById('email-text').value.trim()
-    //   let msg = document.getElementById('msg-text').value.trim()
-    //   console.log('email:', email)
-    //   console.log('Message:', msg)
-
-    //   const chatData = {
-    //     email: email,
-    //     msg: msg
-    //   }
-    //     // Post to chat table
-    //     fetch('/api/chat/', {
-    //       method: 'post',
-    //       data: chatData,
-    //       headers: { 'Content-Type': 'application/json' },
-    //       body: JSON.stringify(chatData)
-    //     }).then(res => {
-    //       console.log(res)
-    //     })
-
-    //     // Resets textarea
-    //     document.getElementById('email-text').value = ''
-    //     document.getElementById('msg-text').value = ''
-    // }
-
-    ////ROB JS END////
 
     // Overlay
     const overlay = document.querySelector('.overlay')
@@ -304,6 +267,7 @@
       // Grabs user input
       const nameInput = document.querySelector('#firstName').value.trim()
       const creditRating = document.querySelector('#creditScore').value.trim()
+      const buyingTimeline = document.querySelector('#buyTimeline').value.trim()
       const monthlyIncome = document.querySelector('#incomeLevel').value.trim()
       const moneyDown = document.querySelector('#downPayment').value.trim()
       const todaysRate = document.querySelector('#interestRate').value.trim()
@@ -321,6 +285,7 @@
       const userData = {
         clientname: nameInput,
         creditgrade: creditRating,
+        timeline: buyingTimeline,
         income: monthlyIncome,
         cashdown: moneyDown,
         commentsection: commentInput,
@@ -344,6 +309,7 @@
         // Console log monthly max payment and total max budget
         console.log('Your max monthly payment is: $' + monthlyPayment + '.')
         console.log('Your max budget is: $' + parseInt(budget) + '.')
+        console.log('You plan to purchase a home in ' + buyingTimeline)
 
         // Displays results in HTML
         const resultsPage = document.querySelector('#results')
