--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,11 @@
     <div class="mw6 ph5">
     </div>
     <div class="tc tl-ns ph3">
-      <h1 class="f3 f1-l fw3 mb3 mt4 mt0-ns white">Mortgage Calculator</h1>
+      <h1 class="f3 f1-l fw8 mb3 mt4 mt0-ns dark-blue">How Much Can You Afford</h1>
       <h2 class="f3 f3-l fw3 mb5 lh-title white">Answer a few questions to determine the kind of
         home you can qualify for!</h2>
       <a href="/survey" class="f3 link br-pill ph4 pv3 mb4 dib white bg-dark-blue">
-        Start Questionnaire
+        Find Out
       </a>  
     </div>
   </section>
