--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -73,8 +73,7 @@
     #root{
       width: 50px;
       height: auto;
-      margin-top: 1%;
-      margin-bottom: -1%;
+      margin-top: .5%;
       margin-left: 1%;
     }
   </style>
@@ -84,7 +83,7 @@
 </p> -->
 <div id='root'></div>
 <body class="sans-serif">
-  <div class="ma4">
+  <div class="ma2">
     <form class="mb4">
       <h2 class="lh-title">Fill out the form below to find out how much home you can afford</h2>
       <div class="bg-red white dn ph2 pv2 mb4" id="errorMsg">Please fill out all required fields</div>
@@ -145,14 +144,7 @@
       </span>
     </form>
 
-<<<<<<< Updated upstream
-    <div class="f7 tc">
-      <a href="https://github.com/lishure/Rent2Riches" class="blue dim link">GitHub Repo |</a> &nbsp;
-      <a href="/api/chat" class="blue dim link">Chat (API)</a>
-    </div>
 
-=======
->>>>>>> Stashed changes
     <!-- Modal -->
     <div id="results" class="bg-white absolute pa4 z-5 dn"> 
       <h2>Congratulations <span id="first-name"></span>!</h2>
@@ -169,13 +161,7 @@
         way a guarantee of what you can truly afford.
         If you would like to move forward, the next step would be to speak with a Lender for a pre-approval.
       <br>
-<<<<<<< Updated upstream
-
-  
-      <!--ROB HTML END-->
-=======
       
->>>>>>> Stashed changes
     </div>
     <!-- End of Modal -->
   </div>
