--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,6 @@
 <script src='https://unpkg.com/babel-standalone@6.26.0/babel.js'></script>
   <!-- Load our React component. -->
   <script src="logo.jsx"></script>
-
+<script>
+</script>
 </html>
