--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
 </head>
 <body class="sans-serif">
+    <div id="root"></div>
     <div class="jumbotron jumbotron-fluid primary white" id="banner">
         <div class="container text-center">
           <br>
@@ -51,8 +52,14 @@
 
 <style>
 #banner {
-  background: url('https://cdn.wallpapersafari.com/47/58/bu724M.jpg')
+  background: url('./images/banner.jpg')
 }
+#root{
+      width: 50px;
+      height: auto;
+      position: fixed;
+      margin: 1%;
+    }
 </style>
   <script>
 
@@ -136,7 +143,14 @@
       })
     
   </script>
+<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/react@16/umd/react.production.js"></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js"></script>
 
+<script src='https://unpkg.com/babel-standalone@6.26.0/babel.js'></script>
+  <!-- Load our React component. -->
+  <script src="logo.jsx"></script>
 </body>
 
 </html>
