--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  
-  <head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,6 +11,10 @@
  
 
   <style>
+    #banner {
+    background: url('https://cdn.wallpapersafari.com/47/58/bu724M.jpg');
+    height: 100px;
+    }
     #results {
       left: 50%;
       transform: translate(-50%, -50%);
@@ -46,6 +48,7 @@
     #root{
       width: 50px;
       height: auto;
+      position: fixed;
       margin: 1%;
     }
     
@@ -71,20 +74,125 @@
     font-size: .875rem;
     } */
 
+
+  /* ROB CSS */
+    .chat-button {
+  background-color: #00449e;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 10px;
+  right: 28px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+  border-radius: 4px
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+#email-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 10px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 10px;
+  border-radius: 4px
+}
+
+#msg-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 10px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 10px;
+  border-radius: 4px
+}
+/* Set a style for the submit/send button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+  border-radius: 4px
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red; 
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  color: white;
+  padding: 0px;
+  border-radius: 2px;
+  font-size: 13px;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+
+    /* ROB CSS END */
+
   </style>
 </head>
+<!-- <p class="w-90 ba br2 pa3 ma2 green bg-washed-green" role="alert" style="visibility: hidden">
+  <strong>Well done!</strong> You successfully read this important alert message.
+</p> -->
 
 <body class="sans-serif">
     <div id="root">Root</div>
+    <div class="jumbotron jumbotron-fluid primary white" id="banner">
+        <div class="container text-center">
+          <!-- <h2 class="lh-title">Fill out the form below to find out how much home you can afford</h2> -->
+          <h1 class="display-2" style="text-align: center; font-size: 30px; font-weight: bolder">Fill out the form below to find out how much home you can afford</h1>
+          
+        </div>
+      </div>
   <div class="ma4">
     <form class="mb4">
-      <h2 class="lh-title">About You</h2>
       <div class="bg-red white dn ph2 pv2 mb4" id="errorMsg">Please fill out all required fields</div>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
         <legend class="b bw0 f6 pa0 ma0">Full Name*</legend>
         <input type="text" id="firstName" name="firstName" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
       </fieldset>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100" required>
+      <div class="flex items-center justify-between">
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-50" required>
         <legend class="b bw0 f6 pa0 ma0">Credit Score</legend>
         <select name="creditScore" id="creditScore" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
           <option disabled="disabled" selected="true">Please Select One</option>
@@ -95,6 +203,18 @@
           <option value="Exceptional" data-credit-score-minimum="800" data-credit-score-max="850">Exceptional (800-850)</option>
         </select>
       </fieldset>
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-40" required>
+        <legend class="b bw0 f6 pa0 ma0">Buying Timeframe</legend>
+        <select name="buyTimeline" id="buyTimeline" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
+          <option disabled="disabled" selected="true">Please Select One</option>
+          <option value="1-3 Months">1-3 Months</option>
+          <option value="3-6 Months">3-6 Months</option>
+          <option value="6-12 Months">6-12 Months</option>
+          <option value="12+ Months">12+ Months</option>
+          <option value="Never">Never</option>
+        </select>
+      </fieldset>
+      </div>
       <div class="flex items-center justify-between">
         <fieldset class="bw0 ph0 pv2 mb2 mh0 w-two-thirds">
           <legend class="b bw0 f6 pa0 ma0">Monthly Income*</legend>
@@ -109,16 +229,22 @@
           <input type="number" id="interestRate" name="interestRate" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
         </fieldset>
       </div>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+      <fieldset class="bw0 ph0 pv1 mb2 mh0 w-100">
         <legend class="b bw0 f6 pa0 ma0">Down Payment*</legend>
         <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
-
-        <legend class="b bw0 f6 pa0 ma0">What locations are you interested in?</legend>
-        <input id="commentSection" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
+      </fieldset>
+      <fieldset class="bw0 ph0 pv1 mb2 mh0 w-100">
+        <legend class="b bw0 f6 pv2 ma0">What locations are you interested in?</legend>
+        <input id="commentSection" name="commentSection" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="submit-button" type="button">Submit</button>
     </form>
+
+    <div class="f7 tc">
+      <a href="https://github.com/lishure/Rent2Riches" class="blue dim link">GitHub Repo |</a> &nbsp;
+      <a href="/api/chat" class="blue dim link">Chat (API)</a>
+    </div>
 
     <!-- Modal -->
     <div id="results" class="bg-white absolute pa4 z-5 dn"> 
@@ -136,12 +262,15 @@
         way a guarantee of what you can truly afford.
         If you would like to move forward, the next step would be to speak with a Lender for a pre-approval.
       <br>
+
+  
+      <!--ROB HTML END-->
     </div>
     <!-- End of Modal -->
   </div>
   <div class="overlay fixed z-1"></div>
 
-  <script> 
+  <script>
 
     // Overlay
     const overlay = document.querySelector('.overlay')
@@ -153,6 +282,7 @@
       // Grabs user input
       const nameInput = document.querySelector('#firstName').value.trim()
       const creditRating = document.querySelector('#creditScore').value.trim()
+      const buyingTimeline = document.querySelector('#buyTimeline').value.trim()
       const monthlyIncome = document.querySelector('#incomeLevel').value.trim()
       const moneyDown = document.querySelector('#downPayment').value.trim()
       const todaysRate = document.querySelector('#interestRate').value.trim()
@@ -170,6 +300,7 @@
       const userData = {
         clientname: nameInput,
         creditgrade: creditRating,
+        timeline: buyingTimeline,
         income: monthlyIncome,
         cashdown: moneyDown,
         commentsection: commentInput,
@@ -193,6 +324,7 @@
         // Console log monthly max payment and total max budget
         console.log('Your max monthly payment is: $' + monthlyPayment + '.')
         console.log('Your max budget is: $' + parseInt(budget) + '.')
+        console.log('You plan to purchase a home in ' + buyingTimeline)
 
         // Displays results in HTML
         const resultsPage = document.querySelector('#results')
@@ -250,7 +382,6 @@
     })
 
   </script>
-<!-- Add React -->
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.production.js"></script>
