--- a/public/home.html
+++ b/public/home.html
@@ -127,7 +127,7 @@
         Start Questionnaire
       </a>
       <div class="f7 tc">
-          <a href="/api/buyers" class="blue dim link">List of Buyers (API) |</a> &nbsp;
+          <!-- <a href="/api/buyers" class="blue dim link">List of Buyers (API) |</a> &nbsp; -->
           <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo |</a> &nbsp;
           <a href="/api/chat" class="blue dim link">Chat (API)</a>
         </div>
