--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -45,7 +45,7 @@
     </table>
 
     <div class="mt4 f7 tc">
-      <a href="/api/buyers" class="blue link">List of Buyers (API)</a> &nbsp; <a href="https://github.com/lishure/Project2"
+      <a href="https://github.com/lishure/Project2"
         class="blue link">GitHub Repo</a>
     </div>
   </div>
