Added chatbot, removed home.html changed / route in html route and cleaned up uneeded comments

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mortgage Calculator</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
   <style>
     body {
@@ -38,6 +41,12 @@
       </a>  
     </div>
   </section>
+  <script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
+  <script>
+    var myLandbot = new LandbotLivechat({
+      index: 'https://landbot.io/u/H-229966-1U7F0K7HT0KJALGU/index.html',
+    });
+  </script>
 </body>
 
 <!-- Add React -->
@@ -45,7 +54,6 @@
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.production.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js"></script>
-
 <script src='https://unpkg.com/babel-standalone@6.26.0/babel.js'></script>
   <!-- Load our React component. -->
   <script src="logo.jsx"></script>
