--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortgage Calculator: Survey</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -75,105 +78,8 @@
     } */
 
 
-  /* ROB CSS */
-    .chat-button {
-  background-color: #00449e;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 10px;
-  right: 28px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%
-}
-
-/* The popup chat - hidden by default */
-.chat-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-  border-radius: 4px
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* When the textarea gets focus, do something */
-.form-container textarea:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-#email-text {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 10px 0;
-  border: none;
-  background: #f1f1f1;
-  resize: none;
-  min-height: 10px;
-  border-radius: 4px
-}
-
-#msg-text {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 10px 0;
-  border: none;
-  background: #f1f1f1;
-  resize: none;
-  min-height: 10px;
-  border-radius: 4px
-}
-/* Set a style for the submit/send button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-  border-radius: 4px
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red; 
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  color: white;
-  padding: 0px;
-  border-radius: 2px;
-  font-size: 13px;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-
-
-    /* ROB CSS END */
-
   </style>
 </head>
-<!-- <p class="w-90 ba br2 pa3 ma2 green bg-washed-green" role="alert" style="visibility: hidden">
-  <strong>Well done!</strong> You successfully read this important alert message.
-</p> -->
 
 <body class="sans-serif">
     <div id="root">Root</div>
@@ -263,8 +169,6 @@
         If you would like to move forward, the next step would be to speak with a Lender for a pre-approval.
       <br>
 
-  
-      <!--ROB HTML END-->
     </div>
     <!-- End of Modal -->
   </div>
@@ -315,11 +219,6 @@
         var userValidation = document.querySelector('#errorMsg')
         userValidation.classList.add('dn')
         overlay.classList.remove('active')
-        // Logs everything to console
-        // console.log('Your Name: ' + userData.name)
-        // console.log('Your Credit Rating: ' + userData.credit)
-        // console.log('Your Monthly Income: $' + userData.income)
-        // console.log('Down Payment Amount: $ ' + userData.cash)
 
         // Console log monthly max payment and total max budget
         console.log('Your max monthly payment is: $' + monthlyPayment + '.')
@@ -364,15 +263,6 @@
 
     // listens for a click on the calendly overlay so the fields will reset
     calendlyParent.addEventListener('click', formResetOnCalendlyClose, false) 
-
-    // Get current rates
-    // fetch('/api/get-interest-rate')
-    //   .then(response => {
-    //     return response.json()
-    //   })
-    //   .then(result => {
-    //     document.querySelector('#interestRate').value = result
-    //   })
 
     // Close overlay
     overlay.addEventListener('click', event => {
