--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="sans-serif">
-    <div id="root">Root</div>
+    <div id="root"></div>
   <section class="flex-ns vh-100 items-center">
     <div class="mw6 ph5">
     </div>
