--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -51,7 +51,7 @@
     #root{
       width: 50px;
       height: auto;
-      position: fixed;
+      position:absolute;
       margin: 1%;
     }
     
@@ -82,7 +82,7 @@
 </head>
 
 <body class="sans-serif">
-    <div id="root">Root</div>
+    <div id="root"></div>
     <div class="jumbotron jumbotron-fluid primary white" id="banner">
         <div class="container text-center">
           <!-- <h2 class="lh-title">Fill out the form below to find out how much home you can afford</h2> -->
