--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -57,8 +57,8 @@
 #root{
       width: 50px;
       height: auto;
-      position: fixed;
       margin: 1%;
+      position: absolute;
     }
 </style>
   <script>
