added calendly appointment button that appears when the (main) overlay is closed (clicked). the button appears and the page auto-scrolls to the bottom of the page to show the user the appointment button. added the favicon to the new index.html page. removed the GitHub and old chat API text links from the survey form page.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+  <link rel="manifest" href="./images/site.webmanifest">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
   <style>
     body {
@@ -33,7 +34,7 @@
     <div class="mw6 ph5">
     </div>
     <div class="tc tl-ns ph3">
-      <h1 class="f3 f1-l fw8 mb3 mt4 mt0-ns dark-blue">How Much Can You Afford</h1>
+      <h1 class="f3 f1-l fw8 mb3 mt4 mt0-ns dark-blue">How Much Can You Afford?</h1>
       <h2 class="f3 f3-l fw3 mb5 lh-title white">Answer a few questions to determine the kind of
         home you can qualify for!</h2>
       <a href="/survey" class="f3 link br-pill ph4 pv3 mb4 dib white bg-dark-blue">
