--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortgage Calculator: Survey</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="manifest" href="./images/site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
@@ -41,6 +42,10 @@
     }
 
     #appointment {
+      float: right;
+      margin-top: 2%;
+    }
+    #appointmentMainPage {
       float: right;
       margin-top: 2%;
     }
@@ -144,13 +149,12 @@
         <input id="commentSection" name="commentSection" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
-      <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="submit-button" type="button">Submit</button>
+      <button class="f6 link dim br-pill ph3 pv2 mt4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="submit-button" type="button">Submit</button>
     </form>
 
-    <div class="f7 tc">
-      <a href="https://github.com/lishure/Rent2Riches" class="blue dim link">GitHub Repo |</a> &nbsp;
-      <a href="/api/chat" class="blue dim link">Chat (API)</a>
-    </div>
+    <span class="ph3 mb4 dn" id='appointmentMainPage'>
+      <a class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-blue" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mortgagecalc/consultation'});return false;">Let's talk. Make an appointment.</a>
+    </span>
 
     <!-- Modal -->
     <div id="results" class="bg-white absolute pa4 z-5 dn"> 
@@ -245,6 +249,10 @@
       }
     })
 
+    function showCalendlyButton() {
+      document.getElementById('appointmentMainPage').classList.remove('dn')
+    }
+
     // click event for appointment button
     document.getElementById('appointment').addEventListener('click', event => {
       // removes the modal screen since calendly has its own screen
@@ -257,8 +265,12 @@
     function formResetOnCalendlyClose(event) {
         if (event.target.classList.contains('calendly-close-overlay') || event.target.classList.contains('calendly-popup-close')) {
             form.reset()
-            setTimeout(window.location.reload(), 1000)
         }
+    }
+
+    // scroll to the bottom
+    function scrollToTheBottom() {
+      window.scrollTo(1000,document.body.scrollHeight)
     }
 
     // listens for a click on the calendly overlay so the fields will reset
@@ -266,10 +278,15 @@
 
     // Close overlay
     overlay.addEventListener('click', event => {
+      let resultsBox = document.querySelector('#results')
       event.preventDefault()
       form.reset()
-      setTimeout(window.location.reload(), 1000)
-      window.scrollTo(1000,document.body.scrollHeight)
+      resultsBox.classList.add('dn')
+      overlay.classList.remove('active')
+      showCalendlyButton()
+      // setTimeout(showCalendlyButton, 1000)
+      setTimeout(scrollToTheBottom, 1000)
+      // window.scrollTo(0,document.querySelector(".scrollingContainer").scrollHeight)
     })
 
   </script>
